# maniskill-failgen

./: .gitignore  README.md  requirements.txt  setup.cfg
examples/: ex_failgen_data_collection.py  ex_failgen_generate_json.py  ex_failgen_wrapper.py
failgen/: env_wrapper.py  fail_planner_wrapper.py
failgen/configs/: FailPegInsertionSide-v1.yaml  FailPickCube-v1.yaml  FailPlugCharger-v1.yaml  FailPushCube-v1.yaml  FailStackCube-v1.yaml  PushCube-v1.yaml
failgen/task_solutions/: peg_insertion_side.py  pick_cube.py  plug_charger.py  push_cube.py  soln_peg_insertion_side.py  soln_pick_cube.py  soln_plug_charger.py  soln_push_cube.py  soln_stack_cube.py  stack_cube.py
failgen/tasks/: fail_peg_insertion_side.py  fail_pick_cube.py  fail_plug_charger.py  fail_push_cube.py  fail_stack_cube.py
failgen/utils/: image_manipulation.py
failgen/wrappers/: record.py  time_limit.py
test/: test_image_packing.py
