[metadata]
name = failgen
version = 0.0.1
description = An RLBench based package for failure generation
long_description = file: README.md
long_description_content_type = text/markdown
author = Wilbert Pumacay
author_email = wilbert.pumacay@ucsp.edu.pe
license = MIT License
url = https://github.com/wpumacay/maniskill-failgen

[options]
packages = find:
python_requires = >=3.8

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    venv

max-line-length = 80
